--- a/posts/another-post-in-the-wall.mdx
+++ b/posts/another-post-in-the-wall.mdx
@@ -1,7 +1,5 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 1
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: May 4 2021
+title: 30 Jours Amazon Prime Gratuit
 ---
 
 This is an example post, with a [link](https://nextjs.org) and a React component:
